--- a/package.json
+++ b/package.json
@@ -5,20 +5,34 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "npm run serve",
+    "preview": "npm run build && npm run serve:build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "@vueuse/core": "^13.5.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.7",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "register-service-worker": "^1.7.2",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.0",
+    "vue-scrollto": "^2.20.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5"
   },
   "eslintConfig": {
     "root": true,
